--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -117,26 +117,31 @@ possibile. \\
 Si è ritenuto dunque opportuno elaborare dei profili ideali e immaginari: conoscendo caratteristiche e comportamenti del destinatario 
 di un prodotto, la progettazione di quest'ultimo risulta notevolmente più efficiente. \\
 Oltre a creare semplicemente un'ottima user experience, dunque, si è prestata una particolare attenzione ad utilizzare un approccio \textit{customer-centered}. \\
-I profili elaborati prendono il nome di \textbf{personas}. \\
-Le \textit{personas} sono veri e propri identikit, creati sulla base di ricerche, che rappresentano un particolare
+I profili elaborati prendono il nome di \textbf{personas}. Le \textit{personas} sono veri e propri identikit, creati sulla base di ricerche, che rappresentano un particolare
 gruppo di clienti che potrebbero utilizzare un prodotto. Delineare le caratteristiche di tali clienti permette di conoscere e comprendere i 
 loro bisogni, obiettivi, paure e motivazioni.\\
-Proprio questi identikit, in conclusione, hanno contruibito allo sviluppo di una \textbf{UX} piacevole, funzionale ed elegante.
+Proprio questi identikit, in conclusione, hanno contruibito allo sviluppo di una \textbf{UX} piacevole, funzionale ed elegante. Di seguito sono mostrati tre di questi profili elaborati. \\
 
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth]{./personas/personas-kumar.pdf}
 \end{figure}
 
+È stato scelto di differenziare le caratteristiche delle personalità prese in analisi, in modo da coprire una maggiore fetta di utenza.
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth]{./personas/personas-cheng.pdf}
 \end{figure}
 
+\newpage
+Modellando dei potenziali utenti è possibile comprendere quelli che potrebbero essere i punti critici del prodotto.
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth]{./personas/personas-bianchi.pdf}
 \end{figure}
+
+Come si può notare dai precedenti modelli, non ci si è concentrati soltanto su probabili \textit{skills} degli utenti, ma anche sul loro 
+temperamento: si ritiene fondamentale, infatti, adattare l'esperienza utente in modo che possa risultare piacevole a tutte le diverse personalità.
 
 \newpage
 
@@ -198,8 +203,8 @@ rispetto al contesto di prototipazione e sviluppo.
 \newpage
 
 \subsubsection{Definizione di uno stile di design}
-Per raffinare l'esperienza utente è stata ritenuta una buona pratica affidarsi ad uno specifico \textbf{UI Design System}.
-La scelta è stata effettuata tra diversi sistemi concorrenti, ricadendo su
+Per raffinare l'esperienza utente è stato ritenuto un buon approccio quello di affidarsi ad uno specifico \textbf{UI Design System}.
+La scelta è stata effettuata tra diversi sistemi concorrenti, ricadendo infine su
 \textbf{Material}\footnote{Material è un design system creato da Google per facilitare lo sviluppo di UX di altissima qualità per Android, iOS, Flutter, e Web-App.}.
 
 \FloatBarrier
@@ -214,20 +219,22 @@ Gli effetti di movimento mirano a focalizzare l'attenzione generando continuità
 Le componenti sono altamente dinamiche, si trasformano e organizzano l'ambiente in base alle interazioni, generando altre trasformazioni.\\
 Le componenti Material sono blocchi interattivi che formano l'interfaccia utente.
 Queste includono stati built-in system per comunicare focus, selezione, attivazione, errore, hovering, pressione, trascinamento, e disabilitazione. \\\\
-Ogni componente copre delle necessità, tra queste troviamo:
+Ogni componente è realizzata avendo specifiche caratteristiche e finalità, tra le quali:
 \begin{itemize}
 	\item \textbf{Esposizione} - Piazzare ed organizzare contenuti correlati usando componenti come \textit{card} e \textit{liste};
 	\item \textbf{Navigazione} - Consentire agli utenti di muoversi nel prodotto finito utilizzando \textit{drawer} o \textit{tabs};
 	\item \textbf{Azioni} - Consentire agli utenti di eseguire task utilizzando componenti di alto rilievo, come i \textit{floating action button};
-	\item \textbf{Input} - Consentire agli utenti di inserire informazioni o selezionare tra un certo numero di opzioni, questo attraverso \textit{campi di testo} dinamici e \textit{chips};
-	\item \textbf{Comunicazione} - Avvertire gli utenti attraverso \textit{snackbar}, \textit{toast} e \textit{dialog}.
+	\item \textbf{Input} - Consentire agli utenti di inserire informazioni o selezionare tra un certo numero di opzioni, attraverso \textit{campi di testo dinamici} e \textit{chips};
+	\item \textbf{Comunicazione} - Dare informazioni agli utenti attraverso \textit{snackbar}, \textit{toast} e \textit{dialog}.
 \end{itemize}
 
 
 \newpage
 \section{Documento dei Requisiti Software}
 \subsection{Requisiti funzionali}
-In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazione NaTour21, cioè le funzionalità richieste dai commissionanti.
+In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazione NaTour21, cioè le funzionalità offerte.
+Le funzionalità richieste sono presenti nella loro totalità; inoltre, è stato ritenuto opportuno inserire alcune funzionalità non 
+esplicitamente richieste, ma ritenute dal team di sviluppo come desiderabili per qualsiasi applicativo di questo tipo.
 
 \subsubsection{Autenticazione}
 \begin{table}[H]
@@ -250,7 +257,7 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\rowcolor{PineGreen!70}
 		\textbf{Nome} & \textbf{Descrizione}                                                                                                                       \\
 		\hline
-		Accesso       & Il sistema deve consentire ad un utente di poter effettuare l'accesso alla piattaforma avente eseguito precendentemente una registrazione. \\
+		Accesso       & Il sistema deve consentire ad un utente di poter effettuare l'accesso alla piattaforma avendo eseguito precendentemente una registrazione. \\
 		\hline
 	\end{tabular}
 	\caption{RF.2}
@@ -295,7 +302,7 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\textbf{Nome}             & \textbf{Descrizione}                                                 \\
 		\hline
 		Visualizzazione itinerari & Il sistema deve consentire a un utente autenticato di visualizzare i
-		dettagli degli itinerari pubblicati e i post ad essi associati.                                  \\
+		dettagli degli itinerari pubblicati (tra cui la sua posizione su mappa) e i post ad essi associati.                                  \\
 		\hline
 	\end{tabular}
 	\caption{RF.5}
@@ -467,8 +474,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}    & \textbf{Descrizione}                                                          \\
 		\hline
-		Gestione profilo & Il sistema deve consentire a un utente autenticato di gestire il suo profilo,
-		egli potrà visitare i contenuti inseriti ed eliminarli. Inoltre potrà cambiare la foto profilo.  \\
+		Gestione profilo & Il sistema deve consentire a un utente autenticato di gestire il suo profilo, 
+		quindi di visualizzare i contenuti inseriti ed eliminarli. Inoltre è possibile modificare la foto profilo.  \\
 		\hline
 	\end{tabular}
 	\caption{RF.16}
@@ -482,7 +489,7 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}                  & \textbf{Descrizione}                                                                           \\
 		\hline
-		Gestione conversazioni private & Il sistema deve permettere all'utente autenticato lo scambio di informazioni con altri utenti.
+		Gestione conversazioni private & Il sistema deve consentire a un utente autenticato lo scambio di informazioni con altri utenti.
 		È possibile avviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario.         \\
 		\hline
 	\end{tabular}
@@ -552,7 +559,11 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 
 \end{table}
 
-\subsubsection{Requisiti amministratore}
+\subsubsection{Requisiti amministratore}\footnote{È importante sottolineare che un amministratore è un utente semplice con particolari privilegi: 
+un amministratore potrà, dunque, usufruire di tutte le funzionalità riservate agli 
+utenti. Non vale, però, il viceversa: gli utenti "semplici" non avranno alcun potere 
+sui contenuti pubblicati da altri utenti, se non la possibilità di segnalarli agli 
+amministratori.}
 \begin{table}[H]
 	\centering
 	\begin{tabular}{ |p{5cm}|p{10.3cm}| }
@@ -560,7 +571,7 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}                & \textbf{Descrizione}                                                                                \\
 		\hline
-		Visualizzazione segnalazioni & Il sistema deve permettere all'utente autenticato con i privilegi di amministratore di visualizzare
+		Visualizzazione segnalazioni & Il sistema deve consentire a un utente autenticato con i privilegi di amministratore di visualizzare
 		la lista di segnalazioni inviate.                                                                                                  \\
 		\hline
 	\end{tabular}
@@ -575,7 +586,7 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}              & \textbf{Descrizione}                                                                                \\
 		\hline
-		Amministrazione itinerario & Il sistema deve permettere all'utente autenticato con i privilegi di amministratore di modificare o
+		Amministrazione itinerario & Il sistema deve consentire a un utente autenticato con i privilegi di amministratore di modificare o
 		rimuovere un itinerario segnalato.                                                                                               \\
 		\hline
 	\end{tabular}
@@ -621,7 +632,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome} & \textbf{Descrizione}                                                                                             \\
 		\hline
-		Reattività    & Il sistema dovrebbe essere responsivo, sia nei confronti degli input da parte dell'utente, sia
+		Reattività    & Il sistema deve essere responsivo, sia nei confronti degli input da parte dell'utente, sia
 		in caso di interruzioni esterne con alta priorità (e.g. chiamate in arrivo).
 		Considerando il caso delle interruzioni: il sistema deve essere in grado di salvare il proprio stato e ripresentarlo all'utente. \\
 		\hline
@@ -636,7 +647,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome} & \textbf{Descrizione}                                                                              \\
 		\hline
-		Usabilità     & L'applicazione dovrebbe presentare una \textbf{UX} semplice, che renda il flusso delle operazioni
+		Usabilità     & L'applicazione deve presentare una \textbf{UX} semplice, che renda il flusso delle operazioni
 		comprensibile, anche ad utenti meno esperti.                                                                      \\
 		\hline
 	\end{tabular}
@@ -650,7 +661,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome} & \textbf{Descrizione}                                                                              \\
 		\hline
-		Usabilità     & L'applicazione dovrebbe presentare una \textbf{UX} semplice, che renda il flusso delle operazioni
+		Usabilità     & L'applicazione deve presentare una \textbf{UX} semplice, che renda il flusso delle operazioni
 		comprensibile, anche ad utenti meno esperti.                                                                      \\
 		\hline
 	\end{tabular}
@@ -678,7 +689,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}      & \textbf{Descrizione}                                            \\
 		\hline
-		Sicurezza password & Il sistema non consente di inserire password che non contengano
+		Sicurezza password & Il sistema non deve consentire di inserire password che non contengano
 		almeno 8 caratteri.                                                                  \\
 		\hline
 	\end{tabular}
@@ -692,7 +703,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome}          & \textbf{Descrizione}                                                     \\
 		\hline
-		Numero massimo di foto & Il sistema non consente di inserire più di 5 foto per itinerario o post. \\
+		Numero massimo di foto & Il sistema non deve consentire di inserire più di 5 foto per itinerario o post. \\
 		\hline
 	\end{tabular}
 	\caption{RNF7}
