Aggiunto testing recupero chat dati due membri e retrofit api call (dispatcher + lambda) con whitebox. Da rivedere il test per la validazione dei parametri di registrazione richiesti, da implementatare con blackbox.

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -661,20 +661,6 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\rowcolor{PineGreen!70}
 		\textbf{Nome} & \textbf{Descrizione}                                                                              \\
 		\hline
-		Usabilità     & L'applicazione deve presentare una \textbf{UX} semplice, che renda il flusso delle operazioni
-		comprensibile, anche ad utenti meno esperti.                                                                      \\
-		\hline
-	\end{tabular}
-	\caption{RNF4}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\begin{tabular}{ |p{5cm}|p{10.3cm}| }
-		\hline
-		\rowcolor{PineGreen!70}
-		\textbf{Nome} & \textbf{Descrizione}                                                                              \\
-		\hline
 		Sicurezza     & Il sistema deve essere sicuro, con dati criptati e protetti da attacchi esterni.
 		Nel caso dell'autenticazione per i client, verrà salvato un token (nello specifico \textbf{JWT}) sul dispositivo. \\
 		\hline
@@ -1008,7 +994,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \subsection{Diagrammi di sequenza di analisi}
 Sono presentati nella seguente sezione i Sequence Diagram relativi a due funzionalità offerte dall'applicazione:
 la segnalazione di un itinerario e la ricerca di un itinerario.
-\\subsubsection{Segnalazione itinerario}
+\subsubsection{Segnalazione itinerario}
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth, page=1]{./diagrams/sequenceDomain-segnalazioneItinerario.pdf}
