Aggiunti ECB nella documentazione Modificato nome classe testing

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -990,6 +990,177 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \subsection{Classi, oggetti e relazioni di analisi}
 
+\subsubsection{Autenticazione}
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Login_+_Login_Social.svg}
+	\caption{Login e login con social}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Registrazione.svg}
+	\caption{Registrazione e conferma}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Password_dimenticata.svg}
+	\caption{Password dimenticata}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Logout.svg}
+	\caption{Logout}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+\subsubsection{Interazione con un itinerario}
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Aggiungi_itinerario.svg}
+	\caption{Aggiunta itinerario}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Dettagli_itinerario.svg}
+	\caption{Dettagli itinerario}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Elimina_Itinerario.svg}
+	\caption{Eliminazione itinerario personale - Elimina itinerario altrui (admin)}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Ricerca_itinerario.svg}
+	\caption{Ricerca itinerario}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Segnala_itinerario.svg}
+	\caption{Segnala itinerario}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Valuta_itinerario.svg}
+	\caption{Valuta itinerario}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+\subsubsection{Interazione con un post}
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Crea_Post.svg}
+	\caption{Aggiunta post}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Dettagli_post.svg}
+	\caption{Dettagli post}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Segnala_post.svg}
+	\caption{Segnala post}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Rimuovi_Post.svg}
+	\caption{Eliminazione post personale}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+\subsubsection{Interazione con una compilation}
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Crea_compilation.svg}
+	\caption{Aggiunta compilation}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Dettaglio_compilation_+_Elimina_itinerario_da_compilation.svg}
+	\caption{Dettagli compilation e rimozione itinerario da compilation}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Salva_itinerario_in_compilation.svg}
+	\caption{Salva itinerario in compilation}
+\end{figure}
+\FloatBarrier
+
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Elimina_compilation.svg}
+	\caption{Eliminazione compilation personale}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+\subsubsection{Gestione profilo e interazione con gli utenti}
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Storico_conversazioni_+_Invia_messaggio.svg}
+	\caption{Storico conversazioni e invio messaggio privato}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Ricerca_destinatario_messaggio.svg}
+	\caption{Ricerca destinatario messaggio}
+\end{figure}
+\FloatBarrier
+
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Aggiorna_foto_profilo.svg}
+	\caption{Aggiorna foto profilo}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+\subsubsection{Funzionalità riservate agli amministratori}
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/Aggiorna_foto_profilo.svg}
+	\caption{Modifica itinerario}
+\end{figure}
+\FloatBarrier
+
 \newpage
 \subsection{Diagrammi di sequenza di analisi}
 Sono presentati nella seguente sezione i Sequence Diagram relativi a due funzionalità offerte dall'applicazione:
